# friendly-journey

./: .gitignore  README.md  pyproject.toml
src/app/: main.py
src/app/models/: user.py
src/app/routers/: users.py
src/friendly-journey/: main.py
tests/http_tests/user/: create_user.http  delete_user.http  get_user.http  update_user.http
