[project]
name = "friendly-journey"
version = "0.1.0"
description = ""
authors = [
    {name = "Wener Castro",email = "wenerwagner@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.129.2,<0.130.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "ruff (>=0.15.2,<0.16.0)"
]

[tool.ruff.lint]
extend-select = ["I"]
extend-fixable = ["I"]
